# back-end/src/controllers/article.controller.ts
@@ -2,7 +2,7 @@
  * @Author: sunji 2025506282@qq.com
  * @Date: 2022-11-15 15:24:03
  * @LastEditors: sunji 2025506282@qq.com
- * @LastEditTime: 2022-11-16 15:50:35
+ * @LastEditTime: 2022-11-16 15:58:03
  * @FilePath: \back-end\src\controllers\article.controller.ts
  * @Description: 这是默认设置,请设置`customMade`, 打开koroFileHeader查看配置 进行设置: https://github.com/OBKoro1/koro1FileHeader/wiki/%E9%85%8D%E7%BD%AE
  */
@@ -67,12 +67,12 @@ export class ArticleController extends Controller {
       return failResponse("失败", err);
     }
   }
-  @Get("{id}")
+  @Get("{articleId}")
   public async getArticle(
-    @Path() id: string
+    @Path() articleId: string
   ): Promise<IGolbalResponse<IArticle | null>> {
     try {
-      const result = await new ArticleService().get(id);
+      const result = await new ArticleService().get(articleId);
       return succesResponse(result);
     } catch (err) {
       return failResponse("失败", err);
