# back-end/src/routes.ts
@@ -173,13 +173,13 @@ export function RegisterRoutes(app: express.Router) {
             }
         });
         // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-        app.get('/articles/:id',
+        app.get('/articles/:articleId',
             ...(fetchMiddlewares<RequestHandler>(ArticleController)),
             ...(fetchMiddlewares<RequestHandler>(ArticleController.prototype.getArticle)),
 
             function ArticleController_getArticle(request: any, response: any, next: any) {
             const args = {
-                    id: {"in":"path","name":"id","required":true,"dataType":"string"},
+                    articleId: {"in":"path","name":"articleId","required":true,"dataType":"string"},
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
